--- a/ARTPDDPWA/producto.html
+++ b/ARTPDDPWA/producto.html
@@ -2,47 +2,77 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Detalle del Producto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalle del Producto</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f4f4f4;
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
+    .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 650px; margin:auto; }
+    .fila { margin: 4px 0; }
+    .clave { font-weight: bold; color: #333; }
+    .valor { margin-left: 6px; }
+    .grupo { margin: 15px 0; padding-top: 10px; border-top: 2px solid #ddd; }
+
+    /* Botón volver */
+    .btn { 
+      display: inline-block; 
+      margin-top: 20px; 
+      padding: 10px 16px; 
+      background: #007bff; 
+      color: white; 
+      text-decoration: none; 
+      border-radius: 6px; 
+      font-weight: bold; 
     }
-    .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      max-width: 400px;
-      margin: auto;
-      text-align: left;
+    .btn:hover { background: #0056b3; }
+
+    /* Precios destacados */
+    .precio-publico {
+      font-size: 1.4em;
+      font-weight: bold;
+      color: green;
+      animation: parpadeo 1s infinite alternate;
     }
-    h1 { font-size: 22px; color: #d32f2f; margin-bottom: 10px; }
-    p { margin: 6px 0; }
-    .precio { font-weight: bold; color: #1a7c1a; }
-    .volver {
-      display: block;
-      margin-top: 20px;
-      text-align: center;
-      padding: 10px;
-      background: #0066cc;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
+    @keyframes parpadeo {
+      from { color: #00cc00; }
+      to { color: #009900; }
     }
-    .volver:hover { background: #004a99; }
+    .costo-neto {
+      font-size: 1.4em;
+      font-weight: bold;
+      color: red;
+      animation: parpadeoRojo 1s infinite alternate;
+    }
+    @keyframes parpadeoRojo {
+      from { color: #ff0000; }
+      to { color: #cc0000; }
+    }
+
+    .aviso { color: red; font-weight: bold; margin-top: 20px; text-align:center; }
   </style>
 </head>
 <body>
-  <div class="card" id="detalle">
-    <p>⏳ Cargando producto...</p>
-  </div>
-  <a href="index.html" class="volver">⬅️ Volver al buscador</a>
+  <h2>📦 Detalle del Producto</h2>
+  <div id="detalle" class="card">Cargando...</div>
+  <div id="aviso" class="aviso"></div>
+  <a id="btnVolver" class="btn">⬅ Volver a búsqueda</a>
 
-  <script>
-    // 🗄️ Función para abrir IndexedDB
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, query, where, getDocs } 
+      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    // 🔹 Configuración Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+      authDomain: "inventariopv-643f1.firebaseapp.com",
+      projectId: "inventariopv-643f1",
+    };
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // ===============================
+    // 🗄️ IndexedDB Helpers
+    // ===============================
     function openDB() {
       return new Promise((resolve, reject) => {
         const request = indexedDB.open("provsoftDB", 1);
@@ -50,8 +80,7 @@
         request.onerror = e => reject(e);
       });
     }
-
-    async function getProducto(codigoBarra) {
+    async function getProductoOffline(codigoBarra) {
       const db = await openDB();
       return new Promise(resolve => {
         const tx = db.transaction("productos", "readonly");
@@ -61,26 +90,111 @@
       });
     }
 
-    // 📌 Obtener parámetro de la URL
+    // ===============================
+    // 🔎 Captura parámetro
+    // ===============================
     const params = new URLSearchParams(window.location.search);
-    const id = params.get("id");
+    const codigo = params.get("id");
+    const detalleDiv = document.getElementById("detalle");
+    const avisoDiv = document.getElementById("aviso");
 
-    // 📦 Buscar producto y mostrar
-    (async () => {
-      const producto = await getProducto(id);
-      const div = document.getElementById("detalle");
-      if (!producto) {
-        div.innerHTML = "<p>⚠️ Producto no encontrado en la base local.</p>";
+    function formatoMoneda(valor) {
+      if (isNaN(valor)) return valor;
+      return valor.toLocaleString("es-MX", { style: "currency", currency: "MXN" });
+    }
+
+    // ===============================
+    // 🚀 Renderizar producto
+    // ===============================
+    function renderProducto(p) {
+      let costoBase = Number(p.costoSinImpuesto) || 0;
+      let ieps = costoBase * (Number(p.iepsTasa) || 0);
+      let subtotal = costoBase + ieps;
+      let iva = subtotal * (Number(p.ivaTasa) || 0);
+      let costoNeto = subtotal + iva;
+      let margen = 0;
+      if (costoNeto > 0 && p.precioPublico) {
+        margen = ((Number(p.precioPublico) - costoNeto) / costoNeto) * 100;
+      }
+
+      detalleDiv.innerHTML = `
+        <div class="fila"><span class="clave">codigoBarra:</span> <span class="valor">${p.codigoBarra}</span></div>
+        <div class="fila"><span class="clave">concepto:</span> <span class="valor">${p.concepto}</span></div>
+        <div class="fila"><span class="clave">costoSinImpuesto:</span> <span class="valor">${formatoMoneda(p.costoSinImpuesto)}</span></div>
+        <div class="fila"><span class="clave">costoNeto (impuestos incluidos):</span> 
+          <span class="valor costo-neto">${formatoMoneda(costoNeto)}</span></div>
+        <div class="fila"><span class="clave">margen vs precio público:</span> 
+          <span class="valor">${margen.toFixed(2)} %</span></div>
+
+        <div class="grupo"></div>
+        <div class="fila"><span class="clave">precioPublico:</span> <span class="valor precio-publico">${formatoMoneda(p.precioPublico)}</span></div>
+        <div class="fila"><span class="clave">medioMayoreo:</span> <span class="valor">${formatoMoneda(p.medioMayoreo)}</span></div>
+        <div class="fila"><span class="clave">mayoreo:</span> <span class="valor">${formatoMoneda(p.mayoreo)}</span></div>
+
+        <div class="grupo"></div>
+        <div class="fila"><span class="clave">ivaTasa:</span> <span class="valor">${p.ivaTasa ?? "N/A"}</span></div>
+        <div class="fila"><span class="clave">iepsTasa:</span> <span class="valor">${p.iepsTasa ?? "N/A"}</span></div>
+
+        <div class="grupo"></div>
+        <div class="fila"><span class="clave">marca:</span> <span class="valor">${p.marca}</span></div>
+        <div class="fila"><span class="clave">departamento:</span> <span class="valor">${p.departamento}</span></div>
+
+        <div class="grupo"></div>
+        <div class="fila"><span class="clave">activo:</span> <span class="valor">${p.activo ? "✅ Sí" : "❌ No"}</span></div>
+        <div class="fila"><span class="clave">cantidadPorCaja:</span> <span class="valor">${p.cantidadPorCaja}</span></div>
+
+        <div class="grupo"></div>
+        <div class="fila"><span class="clave">claveSat:</span> <span class="valor">${p.claveSat}</span></div>
+        <div class="fila"><span class="clave">unidadMedidaSat:</span> <span class="valor">${p.unidadMedidaSat}</span></div>
+      `;
+    }
+
+    // ===============================
+    // 🚀 Lógica de carga con Offline/Online
+    // ===============================
+    async function cargarProducto() {
+      if (!codigo) {
+        detalleDiv.innerHTML = "❌ No se especificó un producto.";
         return;
       }
-      div.innerHTML = `
-        <h1>${producto.concepto || "SIN CONCEPTO"}</h1>
-        <p><b>Código:</b> ${producto.codigoBarra || producto.id}</p>
-        <p class="precio">Público: $${producto.precioPublico != null ? Number(producto.precioPublico).toLocaleString("es-MX", { minimumFractionDigits: 2 }) : "—"}</p>
-        <p>Medio Mayoreo: $${producto.medioMayoreo != null ? Number(producto.medioMayoreo).toLocaleString("es-MX", { minimumFractionDigits: 2 }) : "—"}</p>
-        <p>Mayoreo: $${producto.mayoreo != null ? Number(producto.mayoreo).toLocaleString("es-MX", { minimumFractionDigits: 2 }) : "—"}</p>
-      `;
-    })();
+
+      // 1. Intentar en IndexedDB
+      const pLocal = await getProductoOffline(codigo);
+      if (pLocal) {
+        renderProducto(pLocal);
+        return;
+      }
+
+      // 2. Si no está y hay internet, buscar en Firestore
+      if (navigator.onLine) {
+        try {
+          const q = query(collection(db, "productos"), where("codigoBarra", "==", codigo));
+          const snap = await getDocs(q);
+          if (snap.empty) {
+            detalleDiv.innerHTML = "❌ Producto no encontrado en Firestore.";
+            return;
+          }
+          renderProducto(snap.docs[0].data());
+        } catch (err) {
+          avisoDiv.textContent = "❌ Error al consultar Firestore.";
+        }
+      } else {
+        // 3. No hay internet y no está en offline
+        detalleDiv.innerHTML = `<p><b>Código:</b> ${codigo}</p>`;
+        avisoDiv.textContent = "⚠️ Esta información no está disponible offline, sólo en la consulta en línea.";
+      }
+    }
+
+    cargarProducto();
+  </script>
+
+  <script>
+    const btn = document.getElementById("btnVolver");
+    if (document.referrer.includes("buscacatacam.html")) {
+      btn.href = "buscacatacam.html";
+    } else {
+      btn.href = "BuscaCata.html";
+    }
   </script>
 </body>
 </html>
