--- a/ARTPDDPWA/producto.html
+++ b/ARTPDDPWA/producto.html
@@ -187,14 +187,9 @@
 
     cargarProducto();
   </script>
-
-  <script>
-    const btn = document.getElementById("btnVolver");
-    if (document.referrer.includes("buscacatacam.html")) {
-      btn.href = "buscacatacam.html";
-    } else {
-      btn.href = "BuscaCata.html";
-    }
-  </script>
+<script>
+  document.getElementById("btnVolver").href = "index.html";
+</script>
+  
 </body>
 </html>
