--- a/ARTPDDPWA/producto.html
+++ b/ARTPDDPWA/producto.html
@@ -188,7 +188,7 @@
     cargarProducto();
   </script>
 <script>
-  document.getElementById("btnVolver").href = "index.html";
+  document.getElementById("btnVolver").href = "./index.html";
 </script>
   
 </body>
