--- a/ARTPDDPWA/index.html
+++ b/ARTPDDPWA/index.html
@@ -55,7 +55,8 @@
 
   <footer>Powered by <b>PROVSOFT</b></footer>
 
-  <script src="html5-qrcode.min.js"></script>
+  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -277,4 +278,5 @@ if ("serviceWorker" in navigator) {
 
   </script>
 </body>
+
 </html>
