--- a/ARTPDDPWA/index.html
+++ b/ARTPDDPWA/index.html
@@ -168,34 +168,42 @@ async function syncProductos() {
     const minutos = ahora.getMinutes();
     const lastUpdate = await getMeta("lastUpdate");
 
-    // Convertimos lastUpdate a fecha JS
     let ultimaFecha = lastUpdate ? new Date(lastUpdate) : null;
 
-    // Reglas de actualización: solo a las 7am o 9pm
     const debeActualizar =
-      (!ultimaFecha) || // nunca se ha actualizado
-      (
-        (hora === 7 && minutos < 15) ||  // de 7:00 a 7:15 am
-        (hora === 21 && minutos < 15)    // de 9:00 a 9:15 pm
-      );
+      (!ultimaFecha) ||
+      ((hora === 7 && minutos < 15) || (hora === 21 && minutos < 15));
 
     if (!debeActualizar) {
       console.log("📦 Usando catálogo local (IndexedDB). No es hora de actualización.");
       return;
     }
 
-    console.log("⬇️ Descargando catálogo activo de Firestore...");
+    const barra = document.getElementById("barraProgreso");
+    const estado = document.getElementById("estado");
+    barra.value = 0;
+    estado.textContent = "Descargando catálogo...";
+
     const q = query(collection(db, "productos"), where("activo", "==", true));
     const snap = await getDocs(q);
-
     if (snap.empty) throw new Error("No se pudo descargar catálogo");
 
     const lista = snap.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-    await saveProductos(lista);
+
+    // Simular progreso mientras se guarda
+    let i = 0;
+    for (const p of lista) {
+      await saveProductos([p]); // guardar de uno en uno
+      i++;
+      barra.value = Math.floor((i / lista.length) * 100);
+    }
+
     await saveMeta("lastUpdate", ahora.toISOString());
+    estado.textContent = `✅ Catálogo actualizado con ${lista.length} productos`;
     console.log(`✅ Catálogo actualizado con ${lista.length} productos a las ${ahora.toLocaleString()}`);
   } catch (err) {
     console.warn("⚠️ Error al sincronizar con Firestore:", err.message);
+    document.getElementById("estado").textContent = "❌ Error al sincronizar";
 
     const productosLocales = await getAllProductos();
     if (productosLocales.length > 0) {
@@ -205,7 +213,6 @@ async function syncProductos() {
     }
   }
 }
-
 
     // ===============================
     // 🔎 Buscar en IndexedDB
@@ -322,6 +329,7 @@ actualizarEstadoConexion();
 </body>
 
 </html>
+
 
 
 
