--- a/ARTPDDPWA/index.html
+++ b/ARTPDDPWA/index.html
@@ -67,8 +67,7 @@
 
   <footer>Powered by <b>PROVSOFT</b></footer>
 
-  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
-
+  <script src="html5-qrcode.min.js"></script>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -329,6 +328,7 @@ actualizarEstadoConexion();
 </body>
 
 </html>
+
 
 
 
