--- a/ARTPDDPWA/index.html
+++ b/ARTPDDPWA/index.html
@@ -25,12 +25,15 @@
       border: none; border-radius: 6px; cursor: pointer;
     }
     button:hover { background: #004a99; }
-    #lector {
+#lector {
   width: 100%;
   max-width: 400px;
   height: 300px;
-  margin: auto;
+  margin: 15px auto;
   background: #000;
+  border: 2px solid #0066cc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
   display: none;
 }
 
@@ -328,6 +331,7 @@ actualizarEstadoConexion();
 </body>
 
 </html>
+
 
 
 
