--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <a href="ARTPDDPWA/index.html">🔎 Buscador de Artículos</a>
     <!-- Aquí irán más enlaces cuando agregues otras apps -->
   </div>
+  <div class="apps">
+    <a href="POSMOVIL/index.html">🔎 POS MOVIL</a>
+  </div>
+  
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
