--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -1010,6 +1010,23 @@ document.addEventListener("DOMContentLoaded", async () => {
       .catch(err => console.error("❌ Error SW:", err));
     }
   </script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const btnLogout = document.getElementById("btnLogout");
+  if (btnLogout) {
+    btnLogout.addEventListener("click", () => {
+      console.log("🚪 Cerrando sesión...");
+      localStorage.removeItem("usuario_ruta");
+      // 🔹 Ocultar POS y mostrar login
+      document.getElementById("posApp").style.display = "none";
+      document.getElementById("loginScreen").style.display = "flex";
+    });
+  } else {
+    console.warn("⚠️ No se encontró el botón Salir en el DOM.");
+  }
+});
+</script>
+
 </body>
 </html>
 
